fix(animeslide): overly long titles break the layout

--- a/infotv/frontend/styles/desucon/less/slides.less
+++ b/infotv/frontend/styles/desucon/less/slides.less
@@ -165,6 +165,9 @@ body.tall {
                 max-height: 25vmax;
                 margin-bottom: 2vmax;
             }
+            img.small {
+                max-height: 18vmax;
+            }
             .text {
                 font-size: 2vmax;
                 margin-bottom: 2vmax;
